# polyphony

./: .gitignore  ABOUT.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_TEST_PLAN.md  README.md  SPEC.md  TODO.md  WORKFLOW.md  e2e-live.txt  foobar.txt  install.sh  justfile  manifest  mise.toml  polyphony.toml  rust-toolchain.toml  rustfmt.toml
.beads/: .gitignore  config.yaml  metadata.json
.github/ISSUE_TEMPLATE/: agent_behavior.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  cli-e2e.yml  release.yml
crates/agent-acp/: Cargo.toml
crates/agent-acp/src/: lib.rs
crates/agent-acpx/: Cargo.toml
crates/agent-acpx/src/: lib.rs
crates/agent-claude/: Cargo.toml
crates/agent-codex/: Cargo.toml
crates/agent-common/: Cargo.toml
crates/agent-common/src/: asciicast.rs  budget.rs  lib.rs  pty.rs  pty_mock.rs  pty_portable.rs  pty_process_backend.rs  sandbox.rs
crates/agent-copilot/: Cargo.toml
crates/agent-copilot/src/: lib.rs
crates/agent-llama/: Cargo.toml
crates/agent-llama/src/: lib.rs
crates/agent-local/: Cargo.toml
crates/agent-local/src/: asciicast.rs  lib.rs
crates/agent-openai/: Cargo.toml
crates/agent-openai/src/: lib.rs
crates/agent-pi/: Cargo.toml
crates/agent-pi/src/: lib.rs
crates/agents/: Cargo.toml
crates/agents/src/: docker_sandbox.rs  lib.rs
crates/beads/: Cargo.toml
crates/beads/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: bootstrap_support.rs  commands.rs  daemon.rs  errors.rs  main.rs  prelude.rs  repo_manager.rs  store_support.rs  tests.rs  tracing_support.rs  tracker_factory.rs  ui_support.rs  webhook_setup.rs
crates/cli/tests/: e2e_daemon_control.rs  e2e_dispatch.rs  e2e_headless.rs  e2e_reset.rs  e2e_retry_and_data.rs  e2e_scheduling.rs  real_integration.rs
crates/cli/tests/test_support/: fixtures.rs  json.rs  mod.rs  process.rs  repo.rs
crates/core/: Cargo.toml
crates/factoryrs-adapters/: Cargo.toml
crates/factoryrs-adapters/src/: lib.rs
crates/factoryrs-cli/: Cargo.toml
crates/factoryrs-cli/src/: main.rs
crates/factoryrs-core/: Cargo.toml
crates/factoryrs-git/: Cargo.toml
crates/factoryrs-github/: Cargo.toml
crates/factoryrs-github/src/: comment_pr.graphql  lib.rs  project_workflow.graphql  schema.graphql
crates/factoryrs-issue-mock/: Cargo.toml
crates/factoryrs-issue-mock/src/: lib.rs
crates/factoryrs-linear/: Cargo.toml
crates/factoryrs-orchestrator/: Cargo.toml
crates/factoryrs-orchestrator/src/: lib.rs
crates/factoryrs-runtime/: Cargo.toml
crates/factoryrs-runtime/src/: lib.rs
crates/factoryrs-sqlite/: Cargo.toml
crates/factoryrs-tui/: Cargo.toml
crates/factoryrs-tui/src/: lib.rs
crates/factoryrs-workflow/: Cargo.toml
crates/factoryrs-workflow/src/: lib.rs
crates/factoryrs-workspace/: Cargo.toml
crates/factoryrs-workspace/src/: lib.rs
crates/feedback/: Cargo.toml
crates/feedback/src/: lib.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/github/: Cargo.toml
crates/gitlab/: Cargo.toml
crates/gitlab/src/: convert.rs  issues.graphql  lib.rs  merge_requests.graphql  merge_requests.rs  schema.graphql  tests.rs
crates/httpd/: Cargo.toml
crates/httpd/src/: auth.rs  graphql.rs  lib.rs  routes.rs  templates.rs  webhooks.rs
crates/httpd/static/: style.css
crates/httpd/templates/: agents.html  docs.html  heartbeat.html  inbox.html  index.html  layout.html  login.html  logs.html  movements.html  outcomes.html  repos.html  runs.html  tasks.html  triggers.html  users.html  webhooks.html
crates/issue-mock/: Cargo.toml
crates/linear/: Cargo.toml
crates/metrics/: Cargo.toml
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: dispatch.rs  handoff.rs  heartbeat.rs  helpers.rs  lib.rs  lifecycle.rs  pipeline.rs  prelude.rs  pull_request_events.rs  pull_request_reviews.rs  pull_request_triggers.rs  reload.rs  retry.rs  runtime.rs  snapshot.rs  tests.rs
crates/orchestrator/src/prompts/: automation_pr_body.md  automation_review.md  heartbeat.md  planner.md  pull_request_comment_review.md  pull_request_review.md
crates/polyphony-agent-claude/: Cargo.toml
crates/polyphony-agent-codex/: Cargo.toml
crates/polyphony-agent-codex/src/: lib.rs
crates/polyphony-agent-common/: Cargo.toml
crates/polyphony-agent-copilot/: Cargo.toml
crates/polyphony-agent-local/: Cargo.toml
crates/polyphony-agent-openai/: Cargo.toml
crates/polyphony-agent-openai/src/: lib.rs
crates/polyphony-agents/: Cargo.toml
crates/polyphony-cli/: Cargo.toml
crates/polyphony-core/: Cargo.toml
crates/polyphony-feedback/: Cargo.toml
crates/polyphony-git/: Cargo.toml
crates/polyphony-github/: Cargo.toml
crates/polyphony-issue-mock/: Cargo.toml
crates/polyphony-linear/: Cargo.toml
crates/polyphony-orchestrator/: Cargo.toml
crates/polyphony-sqlite/: Cargo.toml
crates/polyphony-tui/: Cargo.toml
crates/polyphony-workflow/: Cargo.toml
crates/polyphony-workspace/: Cargo.toml
crates/sqlite/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: Cargo.toml
crates/workflow/: Cargo.toml
crates/workspace/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md  agents.md  architecture-diagrams.md  architecture.md  comparison-paperclip.md  crates.md  getting-started.md  introduction.md  providers.md  releases.md  runtime-flow.md  tools.md  webhooks.md  workflow.md
homebrew/Formula/: polyphony.rb
scripts/: refresh_github_schema.sh  refresh_linear_schema.sh
scripts/ci/: generate-release-changelog.sh  package-unix.sh  package-windows.ps1  release-tag.sh  update-homebrew-formula.sh  with-sanitized-env.sh
scripts/graphql/: linear_introspection_query.json
templates/: WORKFLOW.md  config.toml  repo-config.toml
templates/agents/: implementer.md  researcher.md  reviewer.md  router.md  tester.md
templates/examples/: WORKFLOW.automation-feedback.md  WORKFLOW.codex-shorthand.md  WORKFLOW.multi-agent.md  WORKFLOW.pipeline-planner.md  WORKFLOW.pipeline-static.md  config.multi-provider.toml  (+3 more)
website/: CNAME  animations.js  index.html  styles.css  wrangler.jsonc
(+122 files in other folders)
