[workspace]
members = [
  "crates/factoryrs-core",
  "crates/factoryrs-workflow",
  "crates/factoryrs-runtime",
  "crates/factoryrs-adapters",
  "crates/factoryrs-git",
  "crates/factoryrs-github",
  "crates/factoryrs-sqlite",
  "crates/factoryrs-tui",
  "crates/factoryrs-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.15"
crossterm = "0.29"
dirs = "6.0"
git2 = "0.20"
graphql_client = "0.16"
liquid = "0.26"
notify = "8.2"
octocrab = "0.49.5"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
