[workspace]
members = [
  "crates/polyphony-core",
  "crates/polyphony-workflow",
  "crates/polyphony-agent-common",
  "crates/polyphony-agent-local",
  "crates/polyphony-agent-codex",
  "crates/polyphony-agent-openai",
  "crates/polyphony-agent-claude",
  "crates/polyphony-agent-copilot",
  "crates/polyphony-agents",
  "crates/polyphony-orchestrator",
  "crates/polyphony-workspace",
  "crates/polyphony-issue-mock",
  "crates/polyphony-linear",
  "crates/polyphony-git",
  "crates/polyphony-github",
  "crates/polyphony-sqlite",
  "crates/polyphony-tui",
  "crates/polyphony-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.15"
crossterm = "0.29"
dirs = "6.0"
futures-util = "0.3"
git2 = "0.20"
graphql_client = "0.16"
liquid = "0.26"
notify = "8.2"
octocrab = "0.49.5"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
