[workspace]
members = [
  "crates/core",
  "crates/workflow",
  "crates/agent-common",
  "crates/agent-acp",
  "crates/agent-acpx",
  "crates/agent-local",
  "crates/agent-pi",
  "crates/agent-codex",
  "crates/agent-openai",
  "crates/agent-claude",
  "crates/agent-copilot",
  "crates/agents",
  "crates/orchestrator",
  "crates/workspace",
  "crates/issue-mock",
  "crates/beads",
  "crates/linear",
  "crates/git",
  "crates/github",
  "crates/gitlab",
  "crates/feedback",
  "crates/tools",
  "crates/sqlite",
  "crates/metrics",
  "crates/tui",
  "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
agent-client-protocol = "0.10.2"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.15"
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6.0"
futures-util = "0.3"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
graphql_client = "0.16"
html-escape = "0.2"
liquid = "0.26"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
notify = "8.2"
octocrab = "0.49.5"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace"] }
ratatui = "0.30"
tui-markdown = { version = "=0.3.7", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustls = { version = "0.23.37", default-features = false, features = ["aws_lc_rs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3"
portable-pty = "0.9"
pty-process = "0.5"
rustix = { version = "1.1", features = ["stdio"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "migrate"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
vt100 = "0.15.2"

[patch.crates-io]
portable-pty = { git = "https://github.com/penso/portable-pty", rev = "7057367" }
