[package]
name = "polyphony-agent-acpx"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
polyphony-core = { path = "../core" }
polyphony-agent-common = { path = "../agent-common" }

[dev-dependencies]
tempfile.workspace = true
