[package]
name = "polyphony-agent-pi"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
polyphony-agent-common = { path = "../agent-common" }
polyphony-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
