[package]
name = "polyphony-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "polyphony"
path = "src/main.rs"

[features]
default = ["linear", "github", "beads", "agent-codex", "agent-claude", "agent-copilot", "agent-openai", "agent-local", "agent-pi", "agent-acpx"]
mock = ["dep:polyphony-issue-mock", "polyphony-issue-mock/mock"]
linear = ["dep:polyphony-linear"]
github = ["dep:polyphony-github"]
beads = ["dep:polyphony-beads"]
sqlite = ["polyphony-sqlite/sqlite"]
agent-acpx = ["polyphony-agents/acpx"]
agent-codex = ["polyphony-agents/codex"]
agent-claude = ["polyphony-agents/claude"]
agent-copilot = ["polyphony-agents/copilot"]
agent-openai = ["polyphony-agents/openai"]
agent-local = ["polyphony-agents/local"]
agent-pi = ["polyphony-agents/pi"]

[dependencies]
async-trait.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
polyphony-core = { path = "../core" }
polyphony-agents = { path = "../agents", default-features = false }
polyphony-git = { path = "../git" }
polyphony-github = { path = "../github", optional = true }
polyphony-feedback = { path = "../feedback" }
polyphony-issue-mock = { path = "../issue-mock", optional = true, default-features = false }
polyphony-beads = { path = "../beads", optional = true }
polyphony-linear = { path = "../linear", optional = true }
polyphony-orchestrator = { path = "../orchestrator" }
polyphony-sqlite = { path = "../sqlite", default-features = false }
polyphony-tui = { path = "../tui" }
polyphony-workflow = { path = "../workflow" }
