[package]
name = "polyphony-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "polyphony"
path = "src/main.rs"

[features]
default = [
  "sqlite",
  "tracing",
  "tui",
  "linear",
  "github",
  "beads",
  "acp",
  "acpx",
  "codex",
  "claude",
  "copilot",
  "openai",
  "local",
  "pi",
]
mock = ["dep:polyphony-issue-mock", "polyphony-issue-mock/mock"]
linear = ["dep:polyphony-linear"]
github = ["dep:polyphony-github"]
beads = ["dep:polyphony-beads"]
sqlite = ["dep:polyphony-sqlite"]
tui = ["dep:polyphony-tui"]
tracing = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  "dep:tracing-opentelemetry",
  "dep:tracing-subscriber",
]
acp = ["polyphony-agents/acp"]
acpx = ["polyphony-agents/acpx"]
codex = ["polyphony-agents/codex"]
claude = ["polyphony-agents/claude"]
copilot = ["polyphony-agents/copilot"]
openai = ["polyphony-agents/openai"]
local = ["polyphony-agents/local"]
pi = ["polyphony-agents/pi"]
agent-acp = ["acp"]
agent-acpx = ["acpx"]
agent-codex = ["codex"]
agent-claude = ["claude"]
agent-copilot = ["copilot"]
agent-openai = ["openai"]
agent-local = ["local"]
agent-pi = ["pi"]

[dependencies]
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
polyphony-core = { path = "../core" }
polyphony-agents = { path = "../agents", default-features = false }
polyphony-git = { path = "../git" }
polyphony-github = { path = "../github", optional = true }
polyphony-feedback = { path = "../feedback" }
polyphony-issue-mock = { path = "../issue-mock", optional = true, default-features = false }
polyphony-beads = { path = "../beads", optional = true }
polyphony-linear = { path = "../linear", optional = true }
polyphony-orchestrator = { path = "../orchestrator" }
polyphony-sqlite = { path = "../sqlite", optional = true }
polyphony-tui = { path = "../tui", optional = true }
polyphony-tools = { path = "../tools" }
polyphony-workspace = { path = "../workspace" }
polyphony-workflow = { path = "../workflow" }

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
