[package]
name = "factoryrs-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "factoryrs"
path = "src/main.rs"

[features]
default = ["mock"]
mock = ["dep:factoryrs-issue-mock", "factoryrs-issue-mock/mock"]
linear = ["dep:factoryrs-linear"]
github = ["dep:factoryrs-github"]
sqlite = ["factoryrs-sqlite/sqlite"]

[dependencies]
clap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
factoryrs-core = { path = "../factoryrs-core" }
factoryrs-git = { path = "../factoryrs-git" }
factoryrs-github = { path = "../factoryrs-github", optional = true }
factoryrs-issue-mock = { path = "../factoryrs-issue-mock", optional = true, default-features = false }
factoryrs-linear = { path = "../factoryrs-linear", optional = true }
factoryrs-orchestrator = { path = "../factoryrs-orchestrator" }
factoryrs-sqlite = { path = "../factoryrs-sqlite", default-features = false }
factoryrs-tui = { path = "../factoryrs-tui" }
factoryrs-workflow = { path = "../factoryrs-workflow" }
