[package]
name = "factoryrs-github"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
graphql_client.workspace = true
octocrab.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
factoryrs-core = { path = "../factoryrs-core" }
