[package]
name = "factoryrs-issue-mock"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["mock"]
mock = []

[dependencies]
async-trait.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
factoryrs-core = { path = "../factoryrs-core" }
