[package]
name = "factoryrs-orchestrator"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
notify.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
factoryrs-core = { path = "../factoryrs-core" }
factoryrs-workspace = { path = "../factoryrs-workspace" }
factoryrs-workflow = { path = "../factoryrs-workflow" }
