[package]
name = "polyphony-feedback"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
polyphony-core = { path = "../core" }
polyphony-workflow = { path = "../workflow" }

[dev-dependencies]
serde_yaml.workspace = true
