[package]
name = "polyphony-git"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
git2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
polyphony-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
