[package]
name = "polyphony-httpd"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-graphql = { workspace = true, features = ["chrono"] }
async-graphql-axum.workspace = true
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
minijinja = { workspace = true, features = ["loader"] }
polyphony-core = { path = "../core" }
polyphony-orchestrator = { path = "../orchestrator" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
