[package]
name = "polyphony-orchestrator"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
notify.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
polyphony-core = { path = "../core" }
polyphony-feedback = { path = "../feedback" }
polyphony-workspace = { path = "../workspace" }
polyphony-workflow = { path = "../workflow" }
