[package]
name = "polyphony-orchestrator"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
liquid.workspace = true
notify.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
polyphony-core = { path = "../core" }
polyphony-git = { path = "../git" }
polyphony-feedback = { path = "../feedback" }
polyphony-workspace = { path = "../workspace" }
polyphony-workflow = { path = "../workflow" }
