[package]
name = "polyphony-agent-codex"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
polyphony-core = { path = "../polyphony-core" }
polyphony-agent-common = { path = "../polyphony-agent-common" }

[dev-dependencies]
tempfile.workspace = true
