[package]
name = "polyphony-agent-copilot"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
polyphony-core = { path = "../polyphony-core" }
polyphony-agent-local = { path = "../polyphony-agent-local" }

[dev-dependencies]
tempfile.workspace = true
